--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div class="calculator">
             <input type="text" placeholder="0" id="output-screen">
-            <button onclick="Clear()">Cl</button>
-            <button onclick="del()">DEL</button>
+            <button onclick="Clear()">AC</button>
+            <button onclick="del()">C</button>
             <button onclick="display('%')">%</button>
             <button onclick="display('/')">/</button>
             <button onclick="display('7')">7</button>
@@ -50,7 +50,7 @@
             }
 
             catch(err) {
-                alert("Invalid")
+                alert("Resultado invalido")
             }
         }
 
